[tool.poetry]
name = "d-geolib"
version = "2.3.0"
description = "Python wrappers around the input and output files of the Deltares D-Serie and D-GEO Suite models"
authors = ["Maarten Pronk <maarten.pronk@deltares.nl>", "Deltares"]
license = "MIT"
homepage = "https://deltares.github.io/GEOLib/"
documentation = "https://deltares.github.io/GEOLib/"
repository = "https://github.com/Deltares/GEOLib"
readme = "README.rst"
packages = [{ include = "geolib" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = ">=1.10.7"
zipp = "^3.15.0"
fastapi = { version = ">=0.95.1", optional = true }
uvicorn = { version = "^0.21.1", optional = true }
requests = "^2.29.0"
jinja2 = "^3.1.2"
httpx = { version = "^0.24.0", optional = true }
shapely = "^2.0.1"
python-dotenv = "^1.0.0"
matplotlib = "3.9.0"
pydantic-settings = { version = "^2.1.0", optional = true }
pydantic-extra-types = { version = "^2.5.0", optional = true }
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
teamcity-messages = "^1.32"
flake8 = "^6.0.0"
black = "^23.3.0"
devtools = "^0.11.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
mypy = "^1.2.0"
sphinx = "^7.0.1"
recommonmark = "^0.7.1"
sphinx-autodoc-typehints = "^1.23.0"
releases = "^2.1.0"
sphinx-multiversion = "^0.2.4"
isort = "^5.12.0"
commitizen = "^3.1.0"
tomlkit = "^0.11.8"

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "httpx", "starlette"]
pydantic-v2 = ["pydantic-settings", "pydantic-extra-types"]

[tool.poetry.scripts]
geolib_server = "geolib.service.main:app"

[tool.black]
line-length = 90
target-version = ['py37']

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"

[tox]
isolated_build = true
envlist = "py37, py38, py39, py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.3.0"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:^version",
    "tests/test_geolib.py",
    "geolib/__init__.py:__version__",
]
annotated_tag = true
