[project]
name = "d-geolib"
version = "2.8.0"
description = "Python wrappers around the input and output files of the Deltares D-Serie and D-GEO Suite models"
authors = [
    { name = "Maarten Pronk", email = "maarten.pronk@deltares.nl" },
    { name = "Deltares" }
]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "zipp>=3.15.0",
    "requests>=2.29.0",
    "jinja2>=3.1.2",
    "shapely>=2.0.1",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.0",
    "pydantic-settings>=2.1.0",
    "pydantic-extra-types>=2.5.0",
]

[project.urls]
Homepage = "https://deltares.github.io/GEOLib/"
Documentation = "https://deltares.github.io/GEOLib/"
Repository = "https://github.com/Deltares/GEOLib"

[project.optional-dependencies]
server = [
    "fastapi>=0.95.1",
    "uvicorn>=0.21.1",
    "httpx>=0.24.0",
    "python-multipart>=0.0.9",
]
dev = [
    "teamcity-messages>=1.32,<2",
    "flake8>=6.0.0,<7",
    "black>=23.3,<25",
    "devtools>=0.11.0,<1",
    "pytest>=7.3.1,<8",
    "pytest-cov>=4.0.0,<5",
    "coverage>=6.5,<7",
    "mypy>=1.2.0,<2",
    "sphinx>=7.0.1,<8",
    "recommonmark>=0.7.1,<1",
    "sphinx-autodoc-typehints>=1.23.0,<2",
    "releases>=2.1.0,<3",
    "sphinx-multiversion>=0.2.4,<1",
    "isort>=5.12.0,<6",
    "commitizen>=3.1.0,<4",
    "tomlkit>=0.11.8,<1",
]

[project.scripts]
geolib_server = "geolib.service.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.8.0"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:^version",
    "tests/test_geolib.py",
    "geolib/__init__.py:__version__",
]
annotated_tag = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pytest = ">=7.3.1,<8"
pytest-cov = ">=4.0.0,<5"
mypy = ">=1.2.0,<2"
teamcity-messages = ">=1.32,<2"
fastapi = ">=0.95.1"
uvicorn = ">=0.21.1"
httpx = ">=0.24.0"
